Tue Mar 26 22:57:08 CEST 2001
    o Moved into kdegames (WildFox)
      (paaarty :)

Sat Mar 24 01:57:31 CET 2001
    o 0.4 -> 0.5 version (WildFox)
      (much has been changed)
      
Fri Mar 16 23:55:16 CET 2001
    o Beta2 -> 0.4 version (WildFox)
      (yiippie...beta state is over :)

Wed Dec 27 00:22:55 CET 2000
    o Beta -> Beta2 version (WildFox)
      (only 2 really important TODO things left)    
    
Sun Dec 24 01:50:47 CET 2000 (WildFox)
    o Alpha -> Beta version 

Fri Nov 01 16:06:52 CET 2000 (WildFox)
    o Initial creation