@@ -1,1 +1,1 @@
-KBattleship 0.5
+KBattleship 0.6
