@@ -1,3 +1,7 @@
+Sat Apr 14 10:56:20 CEST 2001
+    o 0.5 -> 0.6 version (WildFox)
+      (ship-placing preview working :)
+
 Tue Mar 26 22:57:08 CEST 2001
     o Moved into kdegames (WildFox)
       (paaarty :)
